--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -4,11 +4,11 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="NeoEyesTool - 图像标注工具与 IoT 集成系统" />
-    <title>NeoEyesTool - 图像标注工具</title>
+    <meta name="description" content="AI Tool Stack" />
+    <title>AI Tool Stack</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>CamThink Open Source AI Toolbox</noscript>
     <div id="root"></div>
   </body>
 </html>
