--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -8,7 +8,7 @@
     <title>AI Tool Stack</title>
   </head>
   <body>
-    <noscript>CamThink Open Source AI Toolbox</noscript>
+    <noscript>AI Tool Stack</noscript>
     <div id="root"></div>
   </body>
 </html>
