New model space module added, supporting model testing and external model quantization features

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,10 +6,10 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="AI Tool Stack" />
     <link rel="icon" type="image/svg+xml" href="%PUBLIC_URL%/camthink-logo.svg" />
-    <title>AI Tool Stack</title>
+    <title>CamThink AI Tool Stack</title>
   </head>
   <body>
-    <noscript>AI Tool Stack</noscript>
+    <noscript>CamThink AI Tool Stack</noscript>
     <div id="root"></div>
   </body>
 </html>
